--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
     </div>
     <!-- Carousel End -->
 
+    
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-0 service-row">
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="service-item border h-100 p-5">
+                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                            <img class="img-fluid" src="img/icon/coins.png" alt="Icon">
+                        </div>
+                        <h4 class="mb-3">Nifty</h4>
+                        <p class="mb-4">Get best buy and sell calls for Nifty stocks!</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="service-item border h-100 p-5">
+                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                            <img class="img-fluid" src="img/icon/bank.png" alt="Icon">
+                        </div>
+                        <h4 class="mb-3">Banknifty</h4>
+                        <p class="mb-4">Get best buy and sell calls for Banknifty stocks!</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="service-item border h-100 p-5">
+                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                            <img class="img-fluid" src="img/icon/trophy.png" alt="Icon">
+                        </div>
+                        <h4 class="mb-3">Jackpot Calls</h4>
+                        <p class="mb-4">Get amazing jackpot calls frequently in our Telegram group!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Facts Start -->
     <h1 style="text-align: center;">Why To Believe Us?</h1>
@@ -167,7 +202,7 @@
             <div class="row g-0 mx-lg-0" id="xyz">
                 <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="https://assets.materialup.com/uploads/feaaf2ed-2bca-4392-a9a9-6c3f2a800df5/preview.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
