--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
     
     <div class="container-xxl py-5">
         <div class="container">
+            <div class="text-center">
+                <div class="bg-primary mb-3 mx-auto" style="width: 60px; height: 2px;"></div>
+                <h1 class="display-5 mb-5">Nifty, Banknifty & Jackpot Calls</h1>
+            </div>
             <div class="row g-0 service-row">
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.1s">
                     <div class="service-item border h-100 p-5">
