--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 /></noscript>
 <!-- End Meta Pixel Code -->
     
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-29JCJG8BX4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-29JCJG8BX4');
+</script>
+    
     <meta charset="utf-8">
     <title>Hindustan Trader</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
